--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo Init</title>
     <image>DemoImagen</image>
+    <image>release</image>
 </head>
 <body>
     <h1>
