--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Demo Init</title>
     <image>DemoImagen</image>
     <image>release</image>
+    <image>AltaPrioridad</image>
 </head>
 <body>
     <h1>
